package factory.PizzaCase;

/**
 * ClassName: CheesePizza
 * Description:
 * date: 2021/11/27 下午2:49
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class CheesePizza extends PizzaCase1{
    public void prepare() {
        System.out.println("给制作奶酪准备原材料");
    }
}
