package factory.PizzaCase;

/**
 * ClassName: GreekPizza
 * Description:
 * date: 2021/11/27 下午2:50
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class GreekPizza extends PizzaCase1{
    public void prepare() {
        System.out.println("给希腊披萨准备原材料");
    }
}
