package factory.PizzaCase;

/**
 * ClassName: PizzaStore
 * Description:
 * date: 2021/11/27 下午3:03
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class PizzaStore {
    public static void main(String[] args) {
        new OrderPizza();
    }
}
